Buffer bar, Hide/Show controls, Fullscreen

--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
             <div class="controls__progressbar">
                 <!-- <div class="progressbar__time"></div> -->
                 <div class="progressbar__bar"></div>
+                <div class="progressbar__border">
+                  <div class="progressbar__bufferbar"></div>
+                </div>
             </div>
-
             <div class="controls__volume">
                 <div class="volumeBar"><div class="volumeBar"></div></div>
                 <div class="volumeBar"><div class="volumeBar"></div></div>
@@ -30,9 +32,7 @@
                 <div class="volumeBar last"><div class="volumeBar"></div></div>
                 <div class="controls__volume__zone"></div>
             </div>
-
             <button type="button" class="controls__comment"></button>
-
             <button type="button" class="controls__fullscreen"></button>
          </div>
       </div>
