--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-	   <div class="videoPlayer">
+	   <div class="videoPlayer comment-hidden">
          <video class="videoPlayer__video" >
             <source src='http://iandevlin.com/html5/media-player/parrots.mp4' type='video/mp4'>
             <source src='http://iandevlin.com/html5/media-player/parrots.webm' type='video/webm'>
