Bug mousemove fullscreen + no cursor

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <!-- <source src="http://www.nicolas-hoffmann.net/animations/Cavernae_Terragen2.webm" type="video/webm" /> -->
             <!-- <source src="http://www.nicolas-hoffmann.net/animations/Cavernae_Terragen2.theora.ogv" type="video/ogg" /> -->
          </video>
+         <div class="videoPlayer__zone"></div>
          <div class="videoPlayer__controls">
             <button type="button" class="controls__playPause play"></button>
             <div class="controls__progressbar">
