--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
                     <div class="progressbar__time">
                         <div><span>00:00</span></div>
                     </div>
+                    <div class="progressbar__mousetime">
+                        <div><span>00:00</span></div>
+                    </div>
                     <div class="progressbar__bar"></div>
                     <div class="progressbar__border">
                       <div class="progressbar__bufferbar"></div>
