--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
         </div>
     </div>
 
-    <script src="js/lib/jquery/dist/jquery.min.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/fvp.js"></script>
 
 </body>
 </html>
