Add comment button

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <div class="videoPlayer comment-hidden">
+    <div class="videoPlayer">
         <video class="videoPlayer__video" >
             <!-- <source src="http://vjs.zencdn.net/v/oceans.mp4" type="video/mp4"> -->
             <!-- <source src="http://vjs.zencdn.net/v/oceans.webm" type="video/webm"> -->
